# Casper-Bridge

./: .gitignore  DEMO_GUIDE.md  DEMO_SUBMISSION_CHECKLIST.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_STATUS.md  FIXES_COMPLETED_20260102.md  LICENSE  NEXT_ROUND_ROADMAP.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  RELAYER_DEMO_GUIDE.md
contracts/casper/: BROWSER_DEPLOY_GUIDE.md  Cargo.toml  DEPLOY.md  Odra.toml  deploy.sh
contracts/casper/src/: lib.rs  lib_backup.rs
contracts/ethereum/: .env.example  check-balance.js  check-both.js  check-min-burn.js  hardhat.config.js  package-lock.json  package.json  query-burn-event.js  test-balance.js  test-burn-now.js  test-burn.js  test-mint-now.js  test-mint.js
contracts/ethereum/contracts/: CasperBridgeWrapper.sol
contracts/ethereum/scripts/: check-balances.js  check-events.js  deploy.js  diagnose.js  mint-test-tokens.js  mint-to-address.js
contracts/ethereum/test/: wrapper.test.js
docs/: architecture.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BridgeForm.tsx  TransactionHistory.tsx  WalletConnect.tsx
frontend/src/config/: contracts.ts
frontend/src/contracts/: CasperBridgeWrapper.json
frontend/src/store/: useBridgeStore.ts
relayer/: .env.example  check-keys.js  package-lock.json  package.json  test_sdk.js  test_sdk_2.js
relayer/src/: casper-monitor.ts  ethereum-monitor.ts  index.ts  logger.ts  signature-utils.ts
