[package]
name = "casper-bridge-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "1.3.0", default-features = false }

[dev-dependencies]
odra = { version = "1.3.0", features = ["test-env"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true

[features]
default = []
test-env = ["odra/test-env"]
