[package]
name = "casper-bridge-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = "5.0.0"
casper-types = "6.0.0"
base64ct = "=1.7.2"

[[bin]]
name = "casper_bridge_vault"
path = "src/lib.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
